--- a/Index.html
+++ b/Index.html
@@ -9,15 +9,10 @@
       href="bootstrap/css/bootstrap.min.css"
     />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    />
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light margin">
       <a class="navbar-brand" href="#">
         <img src="img/globallabs.jpg" width="65" height="50" />
       </a>
@@ -25,23 +20,87 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Quem somos</a>
+            <a class="nav-link active" href="#quem-somos">Quem somos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="#">Parceiros</a>
+            <a class="nav-link active" href="#parceiros">Parceiros</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="#">Serviços</a>
+            <a class="nav-link active" href="#servicos">Serviços</a>
           </li>
         </ul>
       </div>
     </nav>
+
     <section id="quem_somos">
       <div class="container-fluid quem-somos text-center margin">
-        <p>teste</p>
+        <h3>Quem somos</h3>
+        <img
+          src="img/site_1.jpg"
+          class="rounded-circle"
+          width="200"
+          height="200"
+          alt=""
+        />
+        <h3>Somos um time comprometido com os resultados</h3>
       </div>
     </section>
+
+    <section id="parceiros">
+      <div class="container-fluid parceiros text-center margin">
+        <h3 class="margin">Parceiros</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="img/logo_dio.svg" width="100%" alt="" />
+            </div>
+
+            <div class="col-lg-4">
+              <img src="img/logo_dio.svg" width="100%" alt="" />
+            </div>
+
+            <div class="col-lg-4">
+              <img src="img/logo_dio.svg" width="100%" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container-fluid servicos text-center margin">
+        <h3 class="margin">Serviços</h3>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
+              <img src="img/app.jpg" width="100%" alt="" />
+            </div>
+            <div class="col-lg-6">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
+              <img src="img/site_3.jpg" width="100%" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p class="container-fluid bg-footer text-center margin">
+        Desenvolvido por Jaqueline Rafaela
+      </p>
+    </footer>
   </body>
 </html>
